@@ -1,5 +1,13 @@
 // Copyright 2000-2021 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+
+import org.jetbrains.java.decompiler.build.JasmCompile
+
+plugins {
+  id 'org.jetbrains.kotlin.jvm' version '1.5.21'
+}
+
 apply plugin: 'java'
+apply plugin: 'groovy'
 apply plugin: 'maven-publish'
 
 compileJava {
@@ -10,7 +18,7 @@ compileJava {
 group = 'org.quiltmc'
 archivesBaseName = 'quiltflower'
 
-version = '1.5.0'
+version = '1.6.0'
 
 def ENV = System.getenv()
 version = version + (ENV.GITHUB_ACTIONS ? "" : "+local")
@@ -20,16 +28,28 @@ sourceSets {
   test.java.srcDirs 'test'
   // We need specific java9+ versions of certain classes, so we have a separate source set for them
   java9.java.srcDirs 'java9'
+  testDataGroovy.groovy.srcDirs files("testData/src/groovy/")
+  testDataKotlin.kotlin.srcDirs files("testData/src/kt/")
 }
 
 repositories { mavenCentral() }
 
 dependencies {
-  testImplementation 'junit:junit:4.12'
-  testImplementation 'org.assertj:assertj-core:3.12.2'
+  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
+  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
+  testImplementation 'org.hamcrest:hamcrest:2.2'
 
   // Java 9 classes need the main source set
   java9Implementation sourceSets.main.output
+  testDataGroovyImplementation 'org.codehaus.groovy:groovy:3.0.8'
+  testDataKotlinImplementation platform('org.jetbrains.kotlin:kotlin-bom')
+  testDataKotlinImplementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
+}
+
+test {
+  useJUnitPlatform()
+  systemProperty "DOT_EXPORT_DIR", System.getProperty("DOT_EXPORT_DIR", null)
+  systemProperty "DOT_ERROR_EXPORT_DIR", System.getProperty("DOT_ERROR_EXPORT_DIR", null)
 }
 
 java.toolchain {
@@ -39,6 +59,50 @@ java.toolchain {
 tasks.withType(JavaCompile) {
   options.deprecation = true
 }
+
+task testDataClasses {
+  group = 'build'
+}
+testClasses.dependsOn(testDataClasses)
+
+void createJavaTestDataSet(int version, String suffix = "", List<String> compilerArgs = []) {
+  sourceSets.create("testDataJava${version}${suffix}") {
+    it.java.srcDirs file("testData/src/java${version}${suffix.toLowerCase()}")
+  }
+  tasks.getByName("compileTestDataJava${version}${suffix}Java") {
+    destinationDir = file("testData/classes/java${version}${suffix.toLowerCase()}")
+    javaCompiler = javaToolchains.compilerFor {
+      languageVersion = JavaLanguageVersion.of(version)
+    }
+    options.compilerArgs = compilerArgs
+  }
+  testDataClasses.dependsOn("testDataJava${version}${suffix}Classes")
+}
+
+[8, 9, 11, 16, 17].forEach { version -> createJavaTestDataSet(version) }
+[16, 17].forEach { version -> createJavaTestDataSet(version, "Preview", ["--enable-preview"]) }
+[8, 16].forEach { version -> createJavaTestDataSet(version, "NoDebug", ["-g:none"])}
+
+task compileTestDataJasm(type: JasmCompile) {
+  source = fileTree("testData/src/jasm/")
+  destinationDir = file("testData/classes/jasm/")
+  options.compilerArgs += ["-g"]
+}
+task testDataJasmClasses {
+  group = 'build'
+}
+testDataJasmClasses.dependsOn(compileTestDataJasm)
+testDataClasses.dependsOn(testDataJasmClasses)
+
+compileTestDataGroovyGroovy {
+  destinationDir = file("testData/classes/groovy")
+}
+testDataClasses.dependsOn(testDataGroovyClasses)
+
+compileTestDataKotlinKotlin {
+  destinationDir = file("testData/classes/kt")
+}
+testDataClasses.dependsOn(testDataKotlinClasses)
 
 // Compile the java 9 classes
 compileJava9Java {
